turtleart.stairs.Stairs.scala.error
Compilation error:
Stairs:6: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
    right();
    ^Stairs:8: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
    left();
    ^