turtleart.stairs.Stairs.scala.code
override def run() {
  var stepSize:Double = 35;
  
  for (i <- 1 to 6) {
    forward(stepSize);
    right();
    forward(stepSize);
    left();
  }
}